@@ -45,3 +45,5 @@ Bug fixes:
   - Corrected documentation about sharing the cache directory.
 
   - Fixed compilation warnings from GCC 4.3.
+
+  - The command specified by CCACHE_PREFIX is no longer part of the hash.
